URL Updated to heroku.

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -2,15 +2,10 @@
 
 <h3>Example usage:</h3>
 <p>
-	<a href="https://timestamp-miniservice.herokuapp.com/January%2011,%201996" target="_blank">
-		https://url-minimizer.herokuapp.com/January%2011,%201996
-	</a>
-</p>
-<p>
-	<a href="https://timestamp-miniservice.herokuapp.com/821334600" target="_blank">
-		https://timestamp-miniservice.herokuapp.com/821334600
+	<a href="https://url-minimizer.herokuapp.com/new/https://www.facebook.com" target="_blank">
+		https://url-minimizer.herokuapp.com/new/https://www.facebook.com
 	</a>
 </p>
 
 <h3>Example output:</h3>
-<p>{ "unix": 821334600, "natural": "January 11, 1996" }</p>
+<p>{"original_url":"https://www.facebook.com","new_url":"https://url-minimizer.herokuapp.com/56cce5c59baad9093c181bf8"}</p>
