--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -2,10 +2,10 @@
 
 <h3>Example usage:</h3>
 <p>
-	<a href="https://url-minimizer.herokuapp.com/new/https://www.facebook.com" target="_blank">
-		https://url-minimizer.herokuapp.com/new/https://www.facebook.com
+	<a href="{{app_url}}/new/https://www.facebook.com" target="_blank">
+		{{app_url}}/new/https://www.facebook.com
 	</a>
 </p>
 
 <h3>Example output:</h3>
-<p>{"original_url":"https://www.facebook.com","new_url":"https://url-minimizer.herokuapp.com/56cce5c59baad9093c181bf8"}</p>
+<p>{"original_url":"https://www.facebook.com","new_url":"{{app_url}}/56cce5c59baad9093c181bf8"}</p>
