Changed url with _id for random number.

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -8,4 +8,4 @@
 </p>
 
 <h3>Example output:</h3>
-<p>{"original_url":"https://www.facebook.com","new_url":"{{app_url}}/56cce5c59baad9093c181bf8"}</p>
+<p>{"original_url":"https://www.facebook.com","new_url":"{{app_url}}/5423"}</p>
